metadata/force-app/main/default/objects/CustomName_rjeoq__c/CustomName_rjeoq__c.object-meta.xml
<CustomObject>
    <description>Description_TbYYD</description>
    <label>CustomLabel_SUpNb</label>
    <nameField>
        <label>CustomLabel_SUpNb</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_SUpNbs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>