metadata/force-app/main/default/objects/CustomName_rjeoq__c/fields/CustomField_bNaEi__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bNaEi__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldNOuSR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>